--- a/TAG.html
+++ b/TAG.html
@@ -13,6 +13,6 @@
     <li><a href="3.html">JaveScript</a></li>
   </ol>
   <h2>TAG</h2>
-<p><img src="C:\Users\SJ\Desktop\TAG.PNG" width="100%"></p>
+<p><img src="TAG.PNG" width="100%"></p>
 </body>
 </html>
